tests/errors/err_did_you_mean_var.mix
// ERROR: undefined variable 'scroe'
main()
    score = 100
    print(scroe)
